CSS/style.css
/* ... */
.listed_recipes {
    margin-top: 2%;
    margin-bottom: 20px;
    margin-right: 50px;
    margin-left: 12%;
    padding-left: 10%;
    padding-right: 10%;
    width: 80%;
    height: 150px;
    border: 2px solid rgb(231, 228, 28);
    border-radius: .5rem;
    background-color: rgb(85, 85, 85);
    display: flex;
    justify-content: center;
    align-items: center;
}

p.recipe_name {
  font-family: Inter,-apple-system,system-ui,"Segoe UI",Helvetica,Arial,sans-serif;
  font-size: 34px;
  font-weight: 600;
  margin-top: 3%;
  color: rgb(42, 42, 42);
  margin: auto;
}

.listed_recipe_image {
  display: flex;
  width: 15%;
  height: 70%;
  background-color: rgb(42, 42, 42);
  margin: auto;
}

.listed_time {
  display: flex;
  width: 15%;
  height: 70%;
  background-color: rgb(42, 42, 42);
  margin: auto;
}

.listed_serving_size {
  display: flex;
  width: 15%;
  height: 70%;
  background-color: rgb(42, 42, 42);
  margin: auto;
}

p.listed_rating {
  font-family: Inter,-apple-system,system-ui,"Segoe UI",Helvetica,Arial,sans-serif;
  font-size: 34px;
  font-weight: 600;
  margin-top: 3%;
  color: rgb(42, 42, 42);
  margin: auto;
}

p.listed_text {
  font-family: Inter,-apple-system,system-ui,"Segoe UI",Helvetica,Arial,sans-serif;
  font-size: 20px;
  font-weight: 600;
  margin-top: 3%;
  color: rgb(86, 86, 86);
  margin: auto;
}

.button {
  display: flex;
    /* flex-grow: 0.33; */
    flex: 1 1 0;
    margin-left: 4rem;
    margin-right: 4rem;
    justify-content: space-around;
    background-image: rgb(86, 86, 86);
    border-radius: 8px;
    border-style: none;
    box-shadow: rgba(44, 44, 44, 0.15) 0 4px 9px;
    color: rgb(85, 85, 85);
    cursor: pointer;
    font-family: Inter,-apple-system,system-ui,"Segoe UI",Helvetica,Arial,sans-serif;
    font-size: 16px;
    font-weight: 600;
    padding: 13px 20px;
    transform: translate3d(0, 0, 0);
    user-select: none;
}

.button:hover {
  background-image: linear-gradient(rgb(209, 202, 108), rgb(218, 214, 26));
  opacity: 1;
  transform: translateY(0);
  transition-duration: .35s;
  box-shadow: rgba(29, 29, 29, 0.15) 0 4px 9px;
  color: rgb(48, 48, 48);
}

.button:active {
  transform: translateY(2px);
  transition-duration: .35s;
}

footer {
  padding-top: 3.5rem;
  padding-bottom: 3.5rem;
  background-color:rgb(71, 71, 71);
  justify-content: center;
  text-align: center;
  font-weight: 600;
  font-size: large;
  width: 100vw;
  margin: auto;
}

.left_1 {
  height: 19.5vh;  
  width: 150%;
  background-color: rgb(102, 102, 102);
  border-radius: 1rem;
  margin-top: 1rem;
  margin-bottom: 1rem;
  margin-left: 1rem;
  padding-top: 2rem;
  padding-bottom: 1rem;
}

.left_2 {
  height: 57vh;  
  width: 150%;
  background-color: rgb(102, 102, 102);
  border-radius: 1rem;
  margin-top: 1rem;
  margin-bottom: 1rem;
  margin-left: 1rem;
  padding-top: 4rem;
}

.b_home {
  background: transparent;
  border: none !important;
  font-size: 0;
  margin-left: 28%;
}

.b_home:hover {
  transform: translateY(-4px);
  transition-duration: 0.3s;
}

.b_home:active {
  transform: translateY(3px);
}

.b_home:visited {
  display: none;
}

.b_profile {
  background: transparent;
  border: none !important;
  font-size: 0;
  margin-left: 28%;
  margin-top: 6rem;
}

.b_profile:hover {
  transform: translateY(-4px);
  transition-duration: 0.3s;
}

.b_profile:active {
  transform: translateY(3px);
}

.b_profile:visited {
  display: none;
}

.b_settings {
  background: transparent;
  border: none !important;
  font-size: 0;
  margin-left: 28%;
  margin-top: 6rem;
}

.b_settings:hover {
  transform: translateY(-4px);
  transition-duration: 0.3s;
}

.b_settings:active {
  transform: translateY(3px);
}

.b_settings:visited {
  display: none;
}


.rightside {
  width: 100%;
}

.timer {
  margin: auto;
  background-color: rgb(42, 42, 42);
  margin-left: 5%;
  padding-left: 5%;
  margin-right: 5%;
  padding-right: 5%;
  border-radius: 1rem;
  padding-top: 15%;
  padding-bottom: 15%;
}

.timing {
  font-size: 10pt;
}

.modal {
  background-color: rgba(0,0,0,0.4);
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: table;
}

 .modal.hidden {
  display: none;
} 

 .modal .container {
 display: table-cell;
 text-align: center;
 vertical-align: middle;
 width: 200px;
}

.modal .body {
  box-shadow: 5px 10px #888888;
  display: inline-block;
  background-color: white;
  border: 1px solid black; 
  padding: 10px;
} 


/* CSS */


/* f1.html: */


.modal {
  position: fixed;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  opacity: 0;
  visibility: hidden;
  transform: scale(1.1);
  transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
}

.modal-content {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background-color: white;
  padding: 1rem 1.5rem;
  width: 24rem;
  border-radius: 0.5rem;
}

.close-button {
  float: right;
  width: 1.5rem;
  line-height: 1.5rem;
  text-align: center;
  cursor: pointer;
  border-radius: 0.25rem;
  background-color: lightgray;
}

.close-button:hover {
  background-color: darkgray;
}

.show-modal {
  opacity: 1;
  visibility: visible;
  transform: scale(1.0);
  transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
} 

